<resources>
    <string name="app_name">CalculadoraBasica</string>
    <string name="app_title">- Calculadora Básica -</string>
    <string name="editNumber1">Ingrese el primer número</string>
    <string name="editNumber2">Ingrese el segundo número</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="asterisk">*</string>
    <string name="slash">/</string>
    <string name="editResult">Resultado</string>
    <string name="erase">Borrar</string>
    <string name="emptyError">Campo Requerido</string>
</resources>