<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textSize="25dp"
        android:paddingTop="7dp"
        android:background="@color/lavander"
        />

    <EditText
        android:id="@+id/activity_main_number1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textAlignment="center"
        android:hint="@string/editNumber1"
        android:inputType="number|numberDecimal"
        />

    <EditText
        android:id="@+id/activity_main_number2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textAlignment="center"
        android:hint="@string/editNumber2"
        android:inputType="numberDecimal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/activity_main_addition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/mauve"
            android:text="@string/plus"
            android:onClick="addition"
            />

        <Button
            android:id="@+id/activity_main_subtraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/mauve"
            android:text="@string/minus"
            android:onClick="subtraction"
            />

        <Button
            android:id="@+id/activity_main_multiplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/mauve"
            android:text="@string/asterisk"
            android:onClick="multiplication"
            />

        <Button
            android:id="@+id/activity_main_division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/mauve"
            android:text="@string/slash"
            android:onClick="division"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/activity_main_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textAlignment="center"
        android:hint="@string/editResult"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:text="@string/erase"
        android:backgroundTint="@color/grape"
        android:onClick="erase"
        />

</LinearLayout>






